--- a/style.css
+++ b/style.css
@@ -4,3 +4,24 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.card-img-top {
+  height: 300px;
+}
+
+/* Small devices (landscape phones, 576px +) @media (min-width: 576px) 
+   Medium devices (tablets, 768px +) @media (min-width: 768px)
+   Large devices (desktops, 992px and +) @media (min-width: 992px)
+   Extra large devices (large desktops, 1200px and +) @media (min-width: 1200px) */
+
+@media (min-width: 768px) {
+  .card-img-top {
+    height: 500px;
+  }
+}
+
+@media (min-width: 992px) {
+  .card-img-top {
+    height: 300px;
+  }
+}
